--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CatPhotoApp</h1>
+    <main>
+        <h1>CatPhotoApp</h1>
+        <h2>Cat Photos</h2>
+        <!--TODO: Add link to cat photos-->
+        <p>Click here to view more <a href="https://freecatphotoapp.com">cat photos</a>.</p>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
+        <a href="https://freecatphotoapp.com">link to cat pictures</a>
+    </main>
+    
+    
 </body>
 </html>
